# VULKAN-FULL

./: CHANGELOG.md  CMakeLists.txt  COMPILAR.md  EJECUTAR.md  LENGUAJES_COMPLEMENTARIOS.md  LICENSE  MOTOR_GRAFICO_VULKAN.md  PROGRESO.md  README.md  README_EGUI_SETUP.md  SOLUCION_GLSC.md  UI_SYSTEM_RECOMMENDATION.md  UI_UE5_STYLE_PLAN.md  build.sh  compile_shaders.sh  ejecutar.sh  instalar_glslc.sh  main.cpp  vulkan_cube.cpp  vulkan_cube.h
Engine/Core/: Log.cpp  Log.h  Timer.cpp  Timer.h
Engine/Core/Math/: MathUtils.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
Engine/Core/Object/: README.md  TestObject.cpp  TestObject.h  UClass.cpp  UClass.h  UObject.cpp  UObject.h  UObjectDemo.cpp  UObjectDemo.h
Engine/Core/Threading/: README.md  RenderCommandQueue.cpp  RenderCommandQueue.h  ThreadManager.cpp  ThreadManager.h
Engine/Input/: InputManager.cpp  InputManager.h
Engine/RHI/: vulkan_cube.cpp  vulkan_cube.h
Engine/Rendering/: Camera.cpp  Camera.h
Engine/UI/: EGUIWrapper.cpp  EGUIWrapper.h  EGUI_INTEGRATION_PLAN.md  INTEGRATION_GUIDE.md  ImGuiWrapper.cpp  ImGuiWrapper.h  MEJORAS_IMPLEMENTADAS.md  README.md  TEXTURE_PROBLEM_ANALYSIS.md  UIBase.cpp  UIBase.h  UIManager.cpp  UIManager.h  VulkanRenderer.cpp  VulkanRenderer.h  engine_ui_ffi.h
Engine/UI/Panels/: ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  DebugOverlay.cpp  DebugOverlay.h  DebugOverlay_ImGui.cpp  DebugOverlay_ImGui.h  DetailsPanel.cpp  DetailsPanel.h  MenuBar.cpp  MenuBar.h  ObjectHierarchyPanel.cpp  ObjectHierarchyPanel.h  StatsPanel.cpp  StatsPanel.h  StatusBar.cpp  StatusBar.h  ViewportPanel.cpp  ViewportPanel.h
Engine/UI/Rust/: Cargo.toml  cbindgen.toml
Engine/UI/Rust/src/: lib.rs
Engine/UI/Scripting/: LuaUI.cpp  LuaUI.h
Examples/: ThreadingDemo.cpp  UObjectDemoProgram.cpp  run_uobject_demo.sh
Source/: main.cpp  main_threaded.cpp
scripts/ui/: example_panel.lua
shaders/: ui_frag.frag  ui_vert.spv  ui_vert.vert
